test/integration/good/tuples/tuples-simple.stan
transformed data {
   (real, int) y = (1.0,2);
   real x = y.1;
}
