test/integration/bad/err-non-int-dims.stan
transformed data {
  array[2,3] real y;
  real x;
  x = y[1,2.3];
}
model {
}
